# dbt-warehouse-profiler

./: .gitignore  .releaserc.json  CHANGELOG.md  DOCS.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  RELEASE.md  dbt_project.yml  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
integration_tests/: README.md  dbt_project.yml  package-lock.yml  profiles.example.yml
macros/: output.sql  profiling.sql  schema.yml  validation.sql
macros/bigquery/: profiling.sql  validation.sql
macros/snowflake/: profiling.sql  validation.sql
models/: _schema.yml
scripts/: setup-local.sh
tests/generic/: _schema.yml
